--- a/RockMe/RockMe/MainPage.xaml
+++ b/RockMe/RockMe/MainPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:RockMe"
+             xmlns:xamlExtensions="clr-namespace:RockMe.XamlExtensions;assembly=RockMe"
              x:Class="RockMe.MainPage">
-
-  <Label Text="Welcome to Xamarin Forms!"
-           VerticalOptions="Center"
-           HorizontalOptions="Center" />
-
+  <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+    <Label Text="{xamlExtensions:Translate Text=Wellcome}"/>
+    <Label Text="{xamlExtensions:Translate Text=AppName}"/>
+  </StackLayout>
 </ContentPage>
